    Added ability to load TinyMCE in inline mode within a ShadowRoot #TINY-6128
    Added the ability to remove images on a failed upload using the `images_upload_handler` failure callback #TINY-6011
    Added `hasPlugin` function to the editor API to determine if a plugin exists or not #TINY-766
    Added the ability to delete and navigate HTML media elements without the media plugin #TINY-4211
    Added `fullscreen_native` setting to the fullscreen plugin to enable use of the entire monitor #TINY-6284
    Added table related oxide variables to the Style API for more granular control over table cell selection appearance #TINY-6311
    Changed how CSS manipulates table cells when selecting multiple cells to achieve a semi-transparent selection #TINY-6311
    Added the `origin` property to the `ObjectResized` and `ObjectResizeStart` events, to specify which handle the resize was preformed on #TINY-6242
    Added new StyleSheetLoader `unload` and `unloadAll` APIs to allow loaded stylesheets to be removed #TINY-3926
    Changed the `target` property on fired events to use the native event target. The original target for an open shadow root can be obtained using `event.getComposedPath()` #TINY-6128
    Changed the editor to cleanup loaded CSS stylesheets when all editors using the stylesheet have been removed #TINY-3926
    Changed `imagetools` context menu icon for accessing the `image` settings to use the same icon #TINY-4141
    Changed the `editor.insertContent()` and `editor.selection.setContent()` APIs to retain leading and trailing whitespace #TINY-5966
    Deprecated the `Env.experimentalShadowDom` flag #TINY-6128
    Fixed loss of whitespace when inserting content after a non-breaking space #TINY-5966
    Fixed the `event.getComposedPath()` function on events fired from TinyMCE. This was throwing an exception, but now works as expected. #TINY-6128
    Fixed notifications not appearing when the editor is within a ShadowRoot #TINY-6354